--- a/config/nextflow.config
+++ b/config/nextflow.config
@@ -2,7 +2,7 @@
 
 //directory containing reads, reference and short-read output or
 //in_dir = "/path/to/directory" option?
-in_dir
+in_dir =
 
 //reads
 //reads = "/path/to/reads/*.fastq"
