--- a/config/nextflow.config
+++ b/config/nextflow.config
@@ -1,6 +1,7 @@
 //config file
 
-//directory containing reads, reference and short-read output or
+//directory containing reads, reference and short-read output
+//using this option requires the directory to contain: 2 fastq files (*.fastq), zipped/unzipped reference transcriptome and a short-read output file (*.csv)
 //in_dir = "/path/to/directory" option?
 in_dir =
 
