--- a/config/nextflow.config
+++ b/config/nextflow.config
@@ -1,32 +1,36 @@
 //config file
 
-//directory containing reads, reference and short-read output
-//using this option requires the directory to contain: 2 fastq files (*.fastq), zipped/unzipped reference transcriptome and a short-read output file (*.csv)
-//in_dir = "/path/to/directory" option?
-in_dir =
+//one directory containing: reads (read1.fastq, read2.fastq), reference (unzipped directory) and short-read output (file.csv - see template.csv) or you can specify where to look for these files
+//in_dir = "/path/to/directory"
+in_dir = 
 
 //reads
 //reads = "/path/to/reads/*.fastq"
 reads = 
-
-//reference
-//ref = "/path/to/ref"
-ref = 
-ref_fasta = "$ref/fasta/fasta"
-ref_gene = "$ref/gene/gene.gtf"
-
-//short-read output file
-//shr_out = "/path/to/short-read.outputfile"
 shr_out = 
+
+//path to references
+//ref = "/path/to/ref"
+reference = 
+ref_fasta = "${params.ref}/fasta/fasta"
+ref_gene = "${params.ref}/gene/gene.gtf"
 
 //out_dir
 //out_dir = "/path/to/output_directory/"
-out_dir = 
+out_dir = null
 
 
 //params
 //adjustable parameters
-param.fuscia_mapqual = 30
-param.flexi_search_length = 20
+fuscia_mapqual = 30
+flexi_search_length = 20
 
-conda.enabled = true
+
+//executors
+process {
+	executor = 'slurm'
+	queue = 'my-queue'
+	memory = '56 GB'
+	cpus = 4
+	container = 'user/image'
+}
