formatted gen_masterdata and run_cellranger

--- a/nextflow.config
+++ b/nextflow.config
@@ -6,8 +6,8 @@ params {
 	in_dir = 
 
 	//reads
-	//reads = "/path/to/reads/*.fastq"
-	reads = 
+	//reads = "/path/to/reads/"
+	reads = "/stornext/Bioinf/data/lab_davidson/wu.s/datasets/5cl_2R/format/"
 	shr_output = "/stornext/Bioinf/data/lab_davidson/wu.s/pears_test/17-4_test/CCLE_formatted.csv"
 
 	//path to references
@@ -28,7 +28,6 @@ params {
 //executors
 process {
 	executor = 'slurm'
-	queue = 'my-queue'
 	memory = '56 GB'
 	cpus = 4
 	container = 'user/image'
