--- a/nextflow.config
+++ b/nextflow.config
@@ -8,7 +8,7 @@ params {
 	//reads
 	//reads = "/path/to/reads/"
 	reads = "/stornext/Bioinf/data/lab_davidson/wu.s/datasets/5cl_2R/format/"
-	shr_output = "/stornext/Bioinf/data/lab_davidson/wu.s/pears_test/17-4_test/CCLE_formatted.csv"
+	shr_output = "/stornext/Bioinf/data/lab_davidson/wu.s/pears_test/20-4_test/CCLE_formatted.csv"
 
 	//path to references
 	//ref = "/path/to/ref"
@@ -22,7 +22,12 @@ params {
 
 
 	fuscia_mapqual = 30
+	//if the fusion is not in the gene annotations you can specify a range upstream/downstream of the fusion breakpoint
+	//the default option for this is 1000bp
+	fuscia_up = 2000
+	fuscia_down = 1000
 	flexi_searchlen = 20
+	
 }
 
 //executors
