--- a/nextflow.config
+++ b/nextflow.config
@@ -1,36 +1,48 @@
-//config file
+/* This is the configuration file, here you can adjust parameters and executors. */
 
 params {
-	//one directory containing: reads (read1.fastq, read2.fastq), reference (unzipped directory) and short-read output (file.csv - see template.csv) or you can specify where to look for these files
-	//in_dir = "/path/to/directory"
+/* pears takes either a directory ("/path/to/in_dir") containing:
+ * 		- reads: zipped (.fastq.gz) and formatted according to cellranger naming convention 
+ *			([Sample Name]_S1_L00[Lane Number]_[Read Type]_001.fastq.gz)
+ * 		- reference genome: unzipped **TODO: make pears accept zipped format too**
+ *		- list of known fusion (shr_ouput): output from JAFFA can be directly piped pears or in the 
+ *			format of the example.csv file
+ * or you can direct pears to each individual input file:
+ * 		- reads = "/path/to/reads/"
+ *		- reference = "/path/to/reference/"
+ *			- if you have pre-generated .fasta or gene.gtf files, ref_fasta and ref_gene
+ *			  can be changed.
+ * you will also need to indicate an output directory:
+ * 		- out_dir = "/path/to/output_directory/"
+*/
 	in_dir = 
-
-	//reads
-	//reads = "/path/to/reads/"
+	
 	reads = "/stornext/Bioinf/data/lab_davidson/wu.s/datasets/5cl_2R/format/"
 	shr_output = "/stornext/Bioinf/data/lab_davidson/wu.s/pears_test/20-4_test/CCLE_formatted.csv"
 
-	//path to references
-	//ref = "/path/to/ref"
 	reference = "/stornext/Bioinf/data/lab_davidson/wu.s/pears_test/refdata-gex-GRCh38-2020-A"
 	ref_fasta = "${reference}/fasta/fasta"
 	ref_gene = "${reference}/gene/gene.gtf"
 
-	//out_dir
-	//out_dir = "/path/to/output_directory/"
 	out_dir = "/stornext/Bioinf/data/lab_davidson/wu.s/nf_pears_test/20-4"
 
+//adjustable parameters
+/* fuscia_mapqual: minimum mapping quality of reads fuscia will look through
+ * fuscia_up/fuscia_down: if there is no gene annotation, you can specify a range (bp) upstream/downstream 
+ *			  of the fusion breakpoint
+ * flexiplex_searchlen: 2x the length of sequence (bp) flexiplex will use to look for the fusion sequence. 
+ * 			Please note, the longer the sequence, the longer flexiplex will take to run. 
+ * 			See **Davidson et al. (2023) 
+*/
 
 	fuscia_mapqual = 30
-	//if the fusion is not in the gene annotations you can specify a range upstream/downstream of the fusion breakpoint
-	//the default option for this is 1000bp
 	fuscia_up = 2000
 	fuscia_down = 1000
 	flexi_searchlen = 20
 	
 }
 
-//executors
+/* Executors **TODO: currently only available on slurm** */
 process {
 	executor = 'slurm'
 	memory = '56 GB'
@@ -40,5 +52,3 @@ process {
 
 //conda env
 conda.enabled = true
-//process.conda = 'pears'
-
