--- a/nextflow.config
+++ b/nextflow.config
@@ -4,6 +4,7 @@ params {
 /* pears takes either a directory ("/path/to/in_dir") containing:
  * 		- reads: zipped (.fastq.gz) and formatted according to cellranger naming convention 
  *			([Sample Name]_S1_L00[Lane Number]_[Read Type]_001.fastq.gz)
+ * 			 You will need to specify the length of the cell barcode and unique molecular identifier
  * 		- reference genome: unzipped **TODO: make pears accept zipped format too**
  *		- list of known fusion (shr_ouput): output from JAFFA can be directly piped pears or in the 
  *			format of the example.csv file
@@ -25,6 +26,9 @@ params {
 	ref_gene = "${reference}/gene/gene.gtf"
 
 	out_dir = "/stornext/Bioinf/data/lab_davidson/wu.s/nf_pears_test/20-4"
+	
+	cellbarcode_len = 16
+	umi_len = 10
 
 //adjustable parameters
 /* fuscia_mapqual: minimum mapping quality of reads fuscia will look through
