--- a/nextflow.config
+++ b/nextflow.config
@@ -16,16 +16,16 @@ params {
  * you will also need to indicate an output directory:
  * 		- out_dir = "/path/to/output_directory/"
 */
-	in_dir = 
+	//in_dir = not working at the moment 
 	
-	reads = "/stornext/Bioinf/data/lab_davidson/wu.s/datasets/5cl_2R/format/"
-	shr_output = "/stornext/Bioinf/data/lab_davidson/wu.s/pears_test/20-4_test/CCLE_formatted.csv"
+	reads = 
+	shr_output = 
 
-	reference = "/stornext/Bioinf/data/lab_davidson/wu.s/pears_test/refdata-gex-GRCh38-2020-A"
+	reference = 
 	ref_fasta = "${reference}/fasta/fasta"
 	ref_gene = "${reference}/gene/gene.gtf"
 
-	out_dir = "/stornext/Bioinf/data/lab_davidson/wu.s/nf_pears_test/20-4"
+	out_dir = 
 	
 	cellbarcode_len = 16
 	umi_len = 10
