added demo files

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,10 +1,10 @@
 /* This is the configuration file, here you can adjust parameters and executors. */
 
-/* pears takes either a directory ("/path/to/in_dir") containing:
+/* pears requires:
  * 		- reads: zipped (.fastq.gz) and formatted according to cellranger naming convention 
  *			([Sample Name]_S1_L00[Lane Number]_[Read Type]_001.fastq.gz)
  * 			 You will need to specify the length of the cell barcode and unique molecular identifier
- * 		- reference genome: unzipped **TODO: make pears accept zipped format too**
+ * 		- reference genome: unzipped
  *		- list of known fusion (shr_ouput): output from JAFFA can be directly piped pears or in the 
  *			format of the example.csv file
  * or you can direct pears to each individual input file:
@@ -20,7 +20,7 @@ params {
 	in_dir = 
 	
 	reads = "/stornext/Bioinf/data/lab_davidson/wu.s/pears_test/in_dir/9cl_2R/"
-	shr_output = "/stornext/Bioinf/data/lab_davidson/wu.s/pears_test/20-4_test/CCLE_formatted.csv"
+	known_list = "/stornext/Bioinf/data/lab_davidson/wu.s/pears_test/20-4_test/CCLE_formatted.csv"
 
 	reference = "/stornext/Bioinf/data/lab_davidson/wu.s/pears_test/refdata-gex-GRCh38-2020-A"
 	ref_fasta = "${reference}/fasta/fasta"
