--- a/nextflow.config
+++ b/nextflow.config
@@ -20,19 +20,19 @@ params {
 	in_dir = 
 	
 	reads = "/stornext/Bioinf/data/lab_davidson/wu.s/pears_test/in_dir/9cl_2R/"
-	known_list = "/stornext/Bioinf/data/lab_davidson/wu.s/pears_test/20-4_test/CCLE_formatted.csv"
+	known_list = "/stornext/Bioinf/data/lab_davidson/wu.s/nf_pears_test/3-5_in/CCLE_formatted.csv"
 
-	reference = "/stornext/Bioinf/data/lab_davidson/wu.s/pears_test/refdata-gex-GRCh38-2020-A"
+	reference = "/stornext/Bioinf/data/lab_davidson/wu.s/nf_pears_test/refdata-gex-GRCh38-2020-A"
 	ref_fasta = "${reference}/fasta/fasta"
 	ref_gene = "${reference}/gene/gene.gtf"
 
-	out_dir = "/stornext/Bioinf/data/lab_davidson/wu.s/nf_pears_test/2-5"
+	out_dir = "/stornext/Bioinf/data/lab_davidson/wu.s/nf_pears_test/9cl_test"
 	
 	cellbarcode_len = 16
-	umi_len = 10
+	umi_len = 12
 
-        fuscia_mapqual = 40
-        fuscia_up = 2000
+        fuscia_mapqual = 30
+        fuscia_up = 1000
         fuscia_down = 1000
         flexi_searchlen = 20
 	
