--- a/nextflow.config
+++ b/nextflow.config
@@ -19,8 +19,8 @@
 params {
 	in_dir = 
 	
-	reads = "/stornext/Bioinf/data/lab_davidson/wu.s/pears_test/in_dir/9cl_2R/"
-	known_list = "/stornext/Bioinf/data/lab_davidson/wu.s/nf_pears_test/3-5_in/CCLE_formatted.csv"
+	reads = "$projectDir/demo"
+	known_list = "$projectDir/demo/short_input.csv"
 
 	reference = "/stornext/Bioinf/data/lab_davidson/wu.s/nf_pears_test/refdata-gex-GRCh38-2020-A"
 	ref_fasta = "${reference}/fasta/fasta"
