option to mayber run cellranger

--- a/nextflow.config
+++ b/nextflow.config
@@ -35,8 +35,12 @@ params {
         fuscia_up = 1000
         fuscia_down = 1000
         flexi_searchlen = 20
-	
+
+	align = true
+
 }
+
+//align = TRUE - runs cellranger
 
 //adjustable parameters
 /* fuscia_mapqual: minimum mapping quality of reads fuscia will look through
