may or not masterdata

--- a/nextflow.config
+++ b/nextflow.config
@@ -37,10 +37,11 @@ params {
         flexi_searchlen = 20
 
 	align = true
-
+	masterdata = true
 }
 
-//align = TRUE - runs cellranger
+//align = true - runs cellranger
+//masterdata = true - file does not exists
 
 //adjustable parameters
 /* fuscia_mapqual: minimum mapping quality of reads fuscia will look through
