--- a/nextflow.config
+++ b/nextflow.config
@@ -30,6 +30,7 @@ params {
 	
 	cellbarcode_len = 16
 	umi_len = 12
+	R2_length = 91	
 
         fuscia_mapqual = 30
         fuscia_up = 1000
@@ -38,6 +39,8 @@ params {
 
 	align = true
 	masterdata = true
+
+	genome_version = GRCh38+GENCODE38	
 }
 
 //align = true - runs cellranger
