--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "fuscia"]
 	path = fuscia
 	url = git@github.com:ding-lab/fuscia.git
+[submodule "STAR"]
+	path = STAR
+	url = https://github.com/alexdobin/STAR
