--- a/nextflow.config
+++ b/nextflow.config
@@ -21,6 +21,7 @@ params {
 	
 	reads = "$projectDir/demo"
 	known_list = "$projectDir/demo/short_input.csv"
+        aligned_file = ""
 
 	reference = "/stornext/Bioinf/data/lab_davidson/wu.s/nf_pears_test/refdata-gex-GRCh38-2020-A"
 	ref_fasta = "${reference}/fasta/fasta"
