--- a/nextflow.config
+++ b/nextflow.config
@@ -20,28 +20,31 @@ params {
 	in_dir = 
 	
 	reads = "$projectDir/demo"
+	read1 = "${reads}/*_1.fastq"
+	read2 = "${reads}/*_2.fastq"
 	known_list = "$projectDir/demo/short_input.csv"
         aligned_file = ""
 
-	reference = "/stornext/Bioinf/data/lab_davidson/wu.s/nf_pears_test/refdata-gex-GRCh38-2020-A"
+	reference = "/path/to/reference_dir/"
 	ref_fasta = "${reference}/fasta/fasta"
 	ref_gene = "${reference}/gene/gene.gtf"
 
-	out_dir = "/stornext/Bioinf/data/lab_davidson/wu.s/nf_pears_test/9cl_test"
+	out_dir = "/path/to/out_dir/"
 	
 	cellbarcode_len = 16
 	umi_len = 12
-	R2_length = 91	
+	R2_length = 91
 
         fuscia_mapqual = 30
         fuscia_up = 1000
         fuscia_down = 1000
         flexi_searchlen = 20
 
+	barcode_whitelist = "$projectDir/modules/barcodes/"
+	genome_version = "GRCh38+GENCODE38"
+	
 	align = true
-	masterdata = true
-
-	genome_version = GRCh38+GENCODE38	
+        masterdata = true
 }
 
 //align = true - runs cellranger
