--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /modules/fuscia
 /modules/flexiplex
 /modules/STAR
+./.git/modules/STAR/objects/pack/pack-f67e728172242412d5bda22d0469194f2044564f.pack
+./modules/STAR/.git/objects/pack/pack-f67e728172242412d5bda22d0469194f2044564f.pack
