--- a/nextflow.config
+++ b/nextflow.config
@@ -17,56 +17,30 @@
 */
 
 params {
-	in_dir = 
-	
-	reads = "$projectDir/demo"
-<<<<<<< HEAD
-	read1 = "${reads}/*_1.fastq"
-	read2 = "${reads}/*_2.fastq"
-	known_list = "$projectDir/demo/short_input.csv"
-        aligned_file = ""
-
-	reference = "/path/to/reference_dir/"
-	ref_fasta = "${reference}/fasta/fasta"
-	ref_gene = "${reference}/gene/gene.gtf"
-
-	out_dir = "/path/to/out_dir/"
-	
-	cellbarcode_len = 16
-	umi_len = 12
+       	reads = "${projectDir}"
+	read1 = "${reads}/demo/*_1.fastq"
+	read2 = "${reads}/demo/*_2.fastq"
+	known_list = "${reads}/demo/short_input.csv"
+	reference = "${projectDir}/ref/"
+	ref_fasta = "${reference}/hg38.fa"
+	ref_gene = "${reference}/gencode.v44.basic.annotation.gtf"
+	out_dir = "/vast/projects/lab_davidson/davidson.n/20240110_Pears/pears/out"	
 	R2_length = 91
-=======
-	known_list = "$projectDir/demo/short_input.csv"
-        aligned_file = ""
-
-	reference = "/stornext/Bioinf/data/lab_davidson/wu.s/nf_pears_test/refdata-gex-GRCh38-2020-A"
-	ref_fasta = "${reference}/fasta/fasta"
-	ref_gene = "${reference}/gene/gene.gtf"
-
-	out_dir = "/stornext/Bioinf/data/lab_davidson/wu.s/nf_pears_test/9cl_test"
-	
 	cellbarcode_len = 16
 	umi_len = 12
-	R2_length = 91	
->>>>>>> a4f53fdf61082f99d2cded4e28076871d04232ef
 
+        aligned_file = ""
         fuscia_mapqual = 30
         fuscia_up = 1000
         fuscia_down = 1000
         flexi_searchlen = 20
 
-<<<<<<< HEAD
 	barcode_whitelist = "$projectDir/modules/barcodes/"
-	genome_version = "GRCh38+GENCODE38"
+	genome_version = "GRCh38+GENCODE44"
 	
 	align = true
         masterdata = true
-=======
-	align = true
-	masterdata = true
 
-	genome_version = GRCh38+GENCODE38	
->>>>>>> a4f53fdf61082f99d2cded4e28076871d04232ef
 }
 
 //align = true - runs cellranger
